[project]
name = "kari-sr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.9.4",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "packaging>=23.0",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "scikit-image>=0.24.0",
    "torch==1.13",
    "torchvision>=0.14.0",
    "tqdm>=4.67.1",
]
